# DVZOLL

./: .env  README.md  index.html
.github/: FUNDING.yml
scripts/: setup-linux.sh  setup-macos.sh  setup-windows.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: downloader.rs  main.rs  prerequisites.rs
src/components/: AboutSection.tsx  CantinaBandToggle.tsx  CategoryChips.tsx  DarthVaderOverlay.tsx  DemoBanner.tsx  DownloadCard.tsx  FeatureGrid.tsx  ForcePush.tsx  GlitchOverlay.tsx  HyperspaceOverlay.tsx  KonamiPad.tsx  LightsaberCursor.tsx  MatrixRain.tsx  OpeningCrawl.tsx  PlatformTicker.tsx  PlaylistProgress.tsx  PlaylistToggle.tsx  QualitySelector.tsx  SecretTerminal.tsx  SingleDownloadProgress.tsx  StarfieldBackground.tsx  ThemeSwitcher.tsx  UrlPreview.tsx
src/components/ui/: sonner.tsx
src/hooks/: useAuth.ts  useAuth.tsx  useConfetti.ts  useKonamiCode.ts  useSettings.ts  useSoundEffects.ts  useStarWarsSounds.ts  useThemeContext.tsx
src/integrations/supabase/: types.ts
src/lib/: isTauri.ts  tauri.ts
src/pages/: Auth.tsx  DevTerminal.tsx  Index.tsx  Settings.tsx
supabase/: config.toml
supabase/functions/download/: index.ts
supabase/functions/process-download/: index.ts
supabase/migrations/: 20260207132302_642fbaf4-a8ae-415d-bfcb-6b2c392d8130.sql
