[package]
name = "dvzoll"
version = "1.0.0"
description = "DVZOLL — Universal Media Downloader Desktop App"
authors = ["DVZOLL"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
dirs = "5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
